feat(readings): fix errors and install libraries, new feature using SQL Server

--- a/package.json
+++ b/package.json
@@ -25,16 +25,20 @@
     "@nestjs/microservices": "^11.1.6",
     "@nestjs/platform-express": "^11.1.6",
     "@nestjs/serve-static": "^5.0.3",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.2",
     "joi": "^18.0.1",
     "kafkajs": "^2.2.4",
     "morgan": "^1.10.1",
-    "mssql": "^11.0.1",
+    "mssql": "^6.4.1",
     "odbc": "^2.4.9",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
-    "uuid": "^13.0.0"
+    "tedious": "^6.7.1",
+    "uuid": "^13.0.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
