--- a/dockerfile.prod
+++ b/dockerfile.prod
@@ -1,43 +1,92 @@
-# Dependencies Stage - docker build -t qrcode-service .
-# This stage installs the dependencies for the application
-FROM node:24-alpine3.22 AS deps
-RUN apk add --no-cache curl
+# --------------------------------------------
+# Dependencies Stage - Instalación de dependencias y compilación de odbc
+# --------------------------------------------
+FROM node:24-bullseye AS deps
+# Variables de entorno necesarias para la instalación
+ENV DEBIAN_FRONTEND=noninteractive
+# Instalar dependencias del sistema
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    curl \
+    nano \
+    unixodbc \
+    unixodbc-dev \
+    freetds-dev \
+    freetds-bin \
+    tdsodbc \
+    python3 \
+    && rm -rf /var/lib/apt/lists/* \
+    && ln -s /usr/lib/x86_64-linux-gnu/libodbc.so.2.0.0 /usr/lib/libodbc.so.2
+# Crear directorios de configuración
+RUN mkdir -p /etc/freetds /etc/odbc
+# Configurar FreeTDS
+RUN echo "[SQLServer2000]\n\
+host = 172.16.102.11\n\
+port = 1433\n\
+tds version = 8.0\n" > /etc/freetds/freetds.conf
+# Configurar ODBC DSN
+RUN echo "[SQLServer2000]\n\
+Description = SQL Server 2000\n\
+Driver = FreeTDS\n\
+Servername = SQLServer2000\n\
+Database = Bdd21julio2025\n" > /etc/odbc.ini
+# Configurar driver ODBC
+RUN echo "[FreeTDS]\n\
+Description = FreeTDS Driver\n\
+Driver = /usr/lib/x86_64-linux-gnu/odbc/libtdsodbc.so\n\
+Setup =\n" > /etc/odbcinst.ini
+# Variables de entorno para ODBC
+ENV ODBCINI=/etc/odbc.ini
+ENV ODBCSYSINI=/etc
 # Set working directory
 WORKDIR /usr/src/app
-# Copy package.json and package-lock.json
-COPY package.json ./
-COPY package-lock.json ./
-# Install dependencies without modifying package-lock.json
-RUN npm ci --legacy-peer-deps
+# Copiar package.json y package-lock.json
+COPY package.json package-lock.json ./
+# Instalar dependencias incluyendo recompilación de odbc
+RUN npm ci --legacy-peer-deps && npm rebuild odbc
 
-# Build Stage - docker build -t qrcode-service .
-FROM node:24-alpine3.22 AS builder
-# Set working directory
+# --------------------------------------------
+# Build Stage - Compilación de la aplicación
+# --------------------------------------------
+FROM node:24-bullseye AS builder
 WORKDIR /usr/src/app
-# Copy the dependencies from the deps stage
+# Copiar dependencias compiladas
 COPY --from=deps /usr/src/app/node_modules ./node_modules
-# Copy the rest of the application code
+# Copiar código fuente
 COPY . .
-# Build the application
+# Compilar la aplicación
 RUN npm run build
-# Clean up dev dependencies
+# Limpiar devDependencies
 RUN npm prune --production
-RUN npm ci --only --production && npm cache clean --force
-# Create the application image
-FROM node:24-alpine3.22 AS production
+
+# --------------------------------------------
+# Production Stage - Imagen final
+# --------------------------------------------
+FROM node:24-bullseye AS production
+# Instalar dependencias del sistema necesarias para ODBC
+ENV DEBIAN_FRONTEND=noninteractive
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    unixodbc \
+    freetds-bin \
+    tdsodbc \
+    && rm -rf /var/lib/apt/lists/* \
+    && ln -s /usr/lib/x86_64-linux-gnu/libodbc.so.2.0.0 /usr/lib/libodbc.so.2
+# Copiar configuraciones de ODBC desde la etapa deps
+COPY --from=deps /etc/odbc.ini /etc/odbc.ini
+COPY --from=deps /etc/odbcinst.ini /etc/odbcinst.ini
+COPY --from=deps /etc/freetds/freetds.conf /etc/freetds/freetds.conf
+# Variables de entorno
+ENV NODE_ENV=production
+ENV ODBCINI=/etc/odbc.ini
+ENV ODBCSYSINI=/etc
 # Set working directory
 WORKDIR /usr/src/app
-# Copy the built application from the builder stage
+# Copiar aplicación compilada y dependencias
 COPY --from=builder /usr/src/app/node_modules ./node_modules
 COPY --from=builder /usr/src/app/dist ./dist
-
-# Set environment variables
-ENV NODE_ENV=production
-
-# Use a non-root user to run the application
+# Usar usuario no-root
 USER node
-
-# Expose the application port
+# Exponer puerto
 EXPOSE 3007
-# Start the application
+# Comando de inicio
 CMD ["node", "dist/main.js"]
